test_errors.txt
warning: struct `ScoredEntry` is never constructed
  --> crates\nanobot-core\src\memory\vector_store.rs:12:8
   |
12 | struct ScoredEntry {
   |        ^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: function `print_completion_message` is never used
   --> crates\nanobot-core\src\setup\wizard.rs:319:4
    |
319 | fn print_completion_message(workspace_d...
    |    ^^^^^^^^^^^^^^^^^^^^^^^^

warning: `nanobot-core` (lib) generated 2 warnings
   Compiling nanobot-core v0.1.0 (C:\Users\AMAN ANU\Desktop\amxcodes\nanobot\nanobot-rs-clean\crates\nanobot-core)
error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> crates\nanobot-core\tests\orchestration_test.rs:11:28
   |
11 |     let manager = Arc::new(AgentManager::new(dir.path().to_path_buf()).await?);
   |                            ^^^^^^^^^^^^^^^^^ ------------------------ unexpected argument of type `PathBuf`
   |
note: associated function defined here
  --> C:\Users\AMAN ANU\Desktop\amxcodes\nanobot\nanobot-rs-clean\crates\nanobot-core\src\gateway\agent_manager.rs:68:12
   |
68 |     pub fn new() -> Self {
   |            ^^^
help: remove the extra argument
   |
11 -     let manager = Arc::new(AgentManager::new(dir.path().to_path_buf()).await?);
11 +     let manager = Arc::new(AgentManager::new().await?);
   |

error[E0277]: `AgentManager` is not a future
  --> crates\nanobot-core\tests\orchestration_test.rs:11:72
   |
11 |     let manager = Arc::new(AgentManager::new(dir.path().to_path_buf()).await?);
   |                            ------------------------------------------- ^^^^^ `AgentManager` is not a future
   |                            |
   |                            this call returns `AgentManager`
   |
   = help: the trait `Future` is not implemented for `AgentManager`
   = note: AgentManager must be a future or must implement `IntoFuture` to be awaited
   = note: required for `AgentManager` to implement `IntoFuture`
help: remove the `.await`
   |
11 -     let manager = Arc::new(AgentManager::new(dir.path().to_path_buf()).await?);
11 +     let manager = Arc::new(AgentManager::new(dir.path().to_path_buf())?);
   |

error[E0282]: type annotations needed for `Arc<_>`
  --> crates\nanobot-core\tests\orchestration_test.rs:11:9
   |
11 |     let manager = Arc::new(AgentManager::new(dir.path().to_path_buf()).await?);
   |         ^^^^^^^
...
14 |     let parent_session = manager.create_session(None, None).await?;
   |                                  -------------- type must be known at this point
   |
help: consider giving `manager` an explicit type, where the type for type parameter `T` is specified
   |
11 |     let manager: Arc<T> = Arc::new(AgentManager::new(dir.path().to_path_buf()).await?);
   |                ++++++++

error[E0599]: no variant or associated item named `Persist` found for enum `CleanupPolicy` in the current scope
  --> crates\nanobot-core\tests\orchestration_test.rs:27:24
   |
27 |         CleanupPolicy::Persist, // Persist across restarts
   |                        ^^^^^^^ variant or associated item not found in `CleanupPolicy`

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> crates\nanobot-core\tests\orchestration_test.rs:58:23
   |
58 |         let manager = AgentManager::new(dir.path().to_path_buf()).await?;
   |                       ^^^^^^^^^^^^^^^^^ ------------------------ unexpected argument of type `PathBuf`
   |
note: associated function defined here
  --> C:\Users\AMAN ANU\Desktop\amxcodes\nanobot\nanobot-rs-clean\crates\nanobot-core\src\gateway\agent_manager.rs:68:12
   |
68 |     pub fn new() -> Self {
   |            ^^^
help: remove the extra argument
   |
58 -         let manager = AgentManager::new(dir.path().to_path_buf()).await?;
58 +         let manager = AgentManager::new().await?;
   |

error[E0277]: `AgentManager` is not a future
  --> crates\nanobot-core\tests\orchestration_test.rs:58:67
   |
58 |         let manager = AgentManager::new(dir.path().to_path_buf()).await?;
   |                       ------------------------------------------- ^^^^^ `AgentManager` is not a future
   |                       |
   |                       this call returns `AgentManager`
   |
   = help: the trait `Future` is not implemented for `AgentManager`
   = note: AgentManager must be a future or must implement `IntoFuture` to be awaited
   = note: required for `AgentManager` to implement `IntoFuture`
help: remove the `.await`
   |
58 -         let manager = AgentManager::new(dir.path().to_path_buf()).await?;
58 +         let manager = AgentManager::new(dir.path().to_path_buf())?;
   |

error[E0599]: no variant or associated item named `Persist` found for enum `CleanupPolicy` in the current scope
  --> crates\nanobot-core\tests\orchestration_test.rs:67:28
   |
67 |             CleanupPolicy::Persist,
   |                            ^^^^^^^ variant or associated item not found in `CleanupPolicy`

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> crates\nanobot-core\tests\orchestration_test.rs:80:19
   |
80 |     let manager = AgentManager::new(dir.path().to_path_buf()).await?;
   |                   ^^^^^^^^^^^^^^^^^ ------------------------ unexpected argument of type `PathBuf`
   |
note: associated function defined here
  --> C:\Users\AMAN ANU\Desktop\amxcodes\nanobot\nanobot-rs-clean\crates\nanobot-core\src\gateway\agent_manager.rs:68:12
   |
68 |     pub fn new() -> Self {
   |            ^^^
help: remove the extra argument
   |
80 -     let manager = AgentManager::new(dir.path().to_path_buf()).await?;
80 +     let manager = AgentManager::new().await?;
   |

error[E0277]: `AgentManager` is not a future
  --> crates\nanobot-core\tests\orchestration_test.rs:80:63
   |
80 |     let manager = AgentManager::new(dir.path().to_path_buf()).await?;
   |                   ------------------------------------------- ^^^^^ `AgentManager` is not a future
   |                   |
   |                   this call returns `AgentManager`
   |
   = help: the trait `Future` is not implemented for `AgentManager`
   = note: AgentManager must be a future or must implement `IntoFuture` to be awaited
   = note: required for `AgentManager` to implement `IntoFuture`
help: remove the `.await`
   |
80 -     let manager = AgentManager::new(dir.path().to_path_buf()).await?;
80 +     let manager = AgentManager::new(dir.path().to_path_buf())?;
   |

Some errors have detailed explanations: E0061, E0277, E0282, E0599.
For more information about an error, try `rustc --explain E0061`.
error: could not compile `nanobot-core` (test "orchestration_test") due to 9 previous errors
